--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,22 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 html {
-  font-size: 62.5%;
+    font-size: 62.5%;
+}
+
+body {
+    font-family: sans-serif;
+    color: #343a40;
+    font-size: 2.4rem;
+    min-height: 100vh;
+
+    height: 100%;
+}
+
+#root {
+    height: 100%;
 }
